--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io": "~1.0.6",
     "express": "~4.6.1",
     "body-parser": "~1.5.0",
-    "nodemailer": "~1.1.1"
+    "nodemailer": "~1.1.1",
+    "ipfilter": "0.0.4"
   }
 }
